--- a/Advize_PlantEverything/Advize_PlantEverything.csproj
+++ b/Advize_PlantEverything/Advize_PlantEverything.csproj
@@ -79,6 +79,10 @@
       <HintPath>Libraries\ServerSync.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="SoftReferenceableAssets">
+      <HintPath>$(GamePath)\valheim_Data\Managed\SoftReferenceableAssets.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
