--- a/Advize_PlantEverything/Advize_PlantEverything.csproj
+++ b/Advize_PlantEverything/Advize_PlantEverything.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Compile Include="Framework\ExtraResource.cs" />
     <Compile Include="Framework\ModLocalization.cs" />
+    <Compile Include="Framework\PluginUtils.cs" />
     <Compile Include="Framework\StaticContent.cs" />
     <Compile Include="Configuration\ModConfig.cs" />
     <Compile Include="Framework\PrefabDB.cs" />
