--- a/Advize_PlantEverything/Advize_PlantEverything.csproj
+++ b/Advize_PlantEverything/Advize_PlantEverything.csproj
@@ -117,7 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Framework\ExtraResource.cs" />
-    <Compile Include="Framework\ModLocalization.cs" />
+    <Compile Include="Localization\ModLocalization.cs" />
     <Compile Include="Framework\PluginUtils.cs" />
     <Compile Include="Framework\StaticContent.cs" />
     <Compile Include="Configuration\ModConfig.cs" />
