--- a/Advize_PlantEasily/Advize_PlantEasily.csproj
+++ b/Advize_PlantEasily/Advize_PlantEasily.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Patches\ModInitPatches.cs" />
     <Compile Include="Patches\UIPatches.cs" />
     <Compile Include="PlantEasily.cs" />
+    <Compile Include="PickableDB.cs" />
     <Compile Include="ReplantDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
