Significant refactor for PlantEverything 1.20

--- a/Advize_ColorfulVines/Advize_ColorfulVines.csproj
+++ b/Advize_ColorfulVines/Advize_ColorfulVines.csproj
@@ -87,7 +87,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\..\..\Games\SteamLibrary\steamapps\common\Valheim\valheim_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <HintPath>$(GamePath)\valheim_Data\Managed\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
